--- a/src/components/home/home-screen.scss
+++ b/src/components/home/home-screen.scss
@@ -15,16 +15,14 @@
 
   .title {
     grid-area: title;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 4em;
   }
 
   .play-button {
     grid-area: play;
+    box-sizing: border-box;
     border: 1px solid black;
-    border-radius: 30px;
+    border-radius: 5px;
+    border-bottom: 5px solid grey;
 
     display: flex;
     justify-content: center;
