--- a/src/components/web/home/home-screen-web.scss
+++ b/src/components/web/home/home-screen-web.scss
@@ -9,8 +9,28 @@
 
   .title {
     width: 500px;
-    height: 200px;
-    border: 1px solid black;
+    height: 240px;
+
+    .row {
+      width: 100%;
+      height: 50%;
+
+      display: grid;
+      grid-template-rows: auto;
+      grid-template-columns: repeat(4, minmax(0, 25%));
+      grid-gap: 5px;
+
+      margin-bottom: 5px;
+    }
+
+    .top {
+      animation: slideInRight 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.1);
+    }
+
+    .bot {
+      animation: slideInLeft 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.1) 0.4s;
+      animation-fill-mode: backwards;
+    }
   }
 
   .play {
@@ -19,6 +39,7 @@
     border: 1px solid black;
     border-bottom: 6px solid grey;
     border-radius: 5px;
+    margin-top: 5px;
 
     display: flex;
     justify-content: center;
@@ -26,11 +47,52 @@
     font-size: 2rem;
 
     transition: all 0.1s linear;
+    animation: slideInUp 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.1) 0.8s;
+    animation-fill-mode: backwards;
 
     &:hover {
+      margin-top: 0px;
       width: 310px;
       height: 65px;
       font-size: 2.1rem;
     }
+  }
+}
+
+@keyframes slideInRight {
+  0% {
+    transform: translateX(-1500px);
+  }
+
+  90% {
+    transform: translateX(10px);
+  }
+
+  100% {
+    transform: translateX(0px);
+  }
+}
+
+@keyframes slideInLeft {
+  0% {
+    transform: translateX(1500px);
+  }
+
+  90% {
+    transform: translateX(-10px);
+  }
+
+  100% {
+    transform: translateX(0px);
+  }
+}
+
+@keyframes slideInUp {
+  0% {
+    transform: translateY(1000px);
+  }
+
+  100% {
+    transform: translateY(0px);
   }
 }
