--- a/src/components/web/home/home-screen-web.scss
+++ b/src/components/web/home/home-screen-web.scss
@@ -14,22 +14,32 @@
     .row {
       width: 100%;
       height: 50%;
+      margin-bottom: 5px;
 
       display: grid;
       grid-template-rows: auto;
       grid-template-columns: repeat(4, minmax(0, 25%));
       grid-gap: 5px;
-
-      margin-bottom: 5px;
     }
 
     .top {
-      animation: slideInRight 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.1);
+      animation: slideInRight 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.15);
+      animation-fill-mode: backwards;
+
+      &.exiting {
+        animation: slideOutLeft 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+        animation-fill-mode: forwards;
+      }
     }
 
     .bot {
-      animation: slideInLeft 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.1) 0.4s;
+      animation: slideInLeft 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.15) 0.4s;
       animation-fill-mode: backwards;
+
+      &.exiting {
+        animation: slideOutRight 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+        animation-fill-mode: forwards;
+      }
     }
   }
 
@@ -47,7 +57,7 @@
     font-size: 2rem;
 
     transition: all 0.1s linear;
-    animation: slideInUp 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.1) 0.8s;
+    animation: slideInUp 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.05) 0.8s;
     animation-fill-mode: backwards;
 
     &:hover {
@@ -57,6 +67,11 @@
       font-size: 2.1rem;
       cursor: pointer;
     }
+
+    &.exiting {
+      animation: slideOutDown 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55) 0.2s;
+      animation-fill-mode: forwards;
+    }
   }
 }
 
@@ -65,12 +80,18 @@
     transform: translateX(-1500px);
   }
 
-  90% {
-    transform: translateX(10px);
+  100% {
+    transform: translateX(0px);
+  }
+}
+
+@keyframes slideOutLeft {
+  0% {
+    transform: translateX(0px);
   }
 
   100% {
-    transform: translateX(0px);
+    transform: translateX(-1500px);
   }
 }
 
@@ -79,12 +100,18 @@
     transform: translateX(1500px);
   }
 
-  90% {
-    transform: translateX(-10px);
+  100% {
+    transform: translateX(0px);
+  }
+}
+
+@keyframes slideOutRight {
+  0% {
+    transform: translateX(0px);
   }
 
   100% {
-    transform: translateX(0px);
+    transform: translateX(1500px);
   }
 }
 
@@ -95,5 +122,15 @@
 
   100% {
     transform: translateY(0px);
+  }
+}
+
+@keyframes slideOutDown {
+  0% {
+    transform: translateY(0px);
+  }
+
+  100% {
+    transform: translateY(1000px);
   }
 }
