--- a/src/components/web/home/home-screen-web.scss
+++ b/src/components/web/home/home-screen-web.scss
@@ -1,3 +1,5 @@
+@import '../../common/styles/animations.scss';
+
 .home-screen-web {
   width: 100%;
   height: 100%;
@@ -72,65 +74,5 @@
       animation: slideOutDown 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55) 0.2s;
       animation-fill-mode: forwards;
     }
-  }
-}
-
-@keyframes slideInRight {
-  0% {
-    transform: translateX(-1500px);
-  }
-
-  100% {
-    transform: translateX(0px);
-  }
-}
-
-@keyframes slideOutLeft {
-  0% {
-    transform: translateX(0px);
-  }
-
-  100% {
-    transform: translateX(-1500px);
-  }
-}
-
-@keyframes slideInLeft {
-  0% {
-    transform: translateX(1500px);
-  }
-
-  100% {
-    transform: translateX(0px);
-  }
-}
-
-@keyframes slideOutRight {
-  0% {
-    transform: translateX(0px);
-  }
-
-  100% {
-    transform: translateX(1500px);
-  }
-}
-
-@keyframes slideInUp {
-  0% {
-    transform: translateY(1000px);
-  }
-
-  100% {
-    transform: translateY(0px);
-  }
-}
-
-@keyframes slideOutDown {
-  0% {
-    transform: translateY(0px);
-  }
-
-  100% {
-    transform: translateY(1000px);
   }
 }
