--- a/src/components/common/letter-tile/letter-tile.scss
+++ b/src/components/common/letter-tile/letter-tile.scss
@@ -1,4 +1,7 @@
 .letter-tile {
+  width: 100%;
+  height: 100%;
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,7 +11,7 @@
 
   box-sizing: border-box;
   //border: 1px solid black;
-  border-radius: 15px;
+  border-radius: 10px;
   box-shadow: 1px 1px 1px 1px rgb(105, 105, 105);
   //box-shadow: inset 0px 0px 2px 2px white;
 
