--- a/src/components/web/game/game-screen-web.scss
+++ b/src/components/web/game/game-screen-web.scss
@@ -1,7 +1,7 @@
 .game-screen-web {
-  width: 100%;
+  width: 1000px;
   height: 100%;
-  padding: 50px;
+  padding: 50px 0px;
   box-sizing: border-box;
 
   display: grid;
