--- a/src/components/web/game/letter-pool.scss
+++ b/src/components/web/game/letter-pool.scss
@@ -5,12 +5,14 @@
   box-sizing: border-box;
   border: 1px solid black;
 
+  padding-right: 12px;
+  padding-bottom: 8px;
+
   display: flex;
   flex-wrap: wrap;
   flex-direction: row-reverse;
 
   .letter-container {
-    // TODO - media query to reset this size so it always fits
     width: 50px;
     height: 50px;
     margin-left: 5px;
