answer word input

--- a/src/components/common/styles/animations.scss
+++ b/src/components/common/styles/animations.scss
@@ -1,3 +1,6 @@
+$animInCurve: cubic-bezier(0.175, 0.885, 0.32, 1.05);
+$animOutCurve: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+
 @keyframes slideInUp {
   0% {
     transform: translateY(1000px);
