--- a/src/components/common/letter-tile/letter-tile.scss
+++ b/src/components/common/letter-tile/letter-tile.scss
@@ -1,6 +1,7 @@
 .letter-tile {
   width: 100%;
   height: 100%;
+  user-select: none;
 
   display: flex;
   justify-content: center;
@@ -16,4 +17,20 @@
   //box-shadow: inset 0px 0px 2px 2px white;
 
   background-color: #ee1246;
+
+  &.inactive {
+    animation: spin 4s linear infinite;
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg) scale(0.95);
+  }
+  50% {
+    transform: rotate(180deg) scale(1.2);
+  }
+  100% {
+    transform: rotate(360deg) scale(0.95);
+  }
 }
