--- a/src/components/web/game/game-screen-web.scss
+++ b/src/components/web/game/game-screen-web.scss
@@ -9,7 +9,7 @@
     'letters answers'
     'input answers';
   grid-template-columns: minmax(0, 60%) minmax(0, 40%);
-  grid-template-rows: minmax(0, auto) minmax(0, 100px);
+  grid-template-rows: minmax(0, auto) minmax(0, 80px);
   column-gap: 30px;
 
   .letter-pool-area {
@@ -20,16 +20,8 @@
     flex-direction: column-reverse;
   }
 
-  .answer-input {
+  .answer-input-area {
     grid-area: input;
-
-    .input-area {
-      width: 100%;
-      height: 100%;
-
-      box-sizing: border-box;
-      border: 1px solid black;
-    }
   }
 
   .answer-area {
