--- a/src/components/common/styles/animations.scss
+++ b/src/components/common/styles/animations.scss
@@ -1,6 +1,8 @@
 $animInCurve: cubic-bezier(0.175, 0.885, 0.32, 1.05);
 $animOutCurve: cubic-bezier(0.68, -0.55, 0.265, 1.55);
 
+$shakeCurve: cubic-bezier(0.36, 0.07, 0.19, 0.97);
+
 @keyframes slideInUp {
   0% {
     transform: translateY(1000px);
@@ -67,5 +69,35 @@ $animOutCurve: cubic-bezier(0.68, -0.55, 0.265, 1.55);
 
   100% {
     transform: translateX(1500px);
+  }
+}
+
+@keyframes shakeSide {
+  10% {
+    transform: translateX(-1px);
+  }
+  20% {
+    transform: translateX(2px);
+  }
+  30% {
+    transform: translateX(-4px);
+  }
+  40% {
+    transform: translateX(4px);
+  }
+  50% {
+    transform: translateX(-4px);
+  }
+  60% {
+    transform: translateX(4px);
+  }
+  70% {
+    transform: translateX(-4px);
+  }
+  80% {
+    transform: translateX(2px);
+  }
+  90% {
+    transform: translateX(-1px);
   }
 }
