testing answer word

--- a/src/components/common/letter-tile/letter-tile.scss
+++ b/src/components/common/letter-tile/letter-tile.scss
@@ -18,6 +18,10 @@
 
   background-color: #ee1246;
 
+  &.selectable {
+    cursor: pointer;
+  }
+
   &.inactive {
     animation: spin 4s linear infinite;
   }
