--- a/src/components/web/game/letter-pool.scss
+++ b/src/components/web/game/letter-pool.scss
@@ -18,6 +18,10 @@
     margin-left: 5px;
     margin-top: 5px;
 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
     animation: slideInDown 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.01);
     animation-fill-mode: both;
   }
