active answer style

--- a/src/components/common/letter-tile/letter-tile.scss
+++ b/src/components/common/letter-tile/letter-tile.scss
@@ -27,6 +27,10 @@
     height: 20%;
     animation: spin 4s linear infinite;
   }
+
+  &.active {
+    background-color: gold;
+  }
 }
 
 @keyframes spin {
