--- a/src/components/web/game/answers-list.scss
+++ b/src/components/web/game/answers-list.scss
@@ -2,9 +2,6 @@
 
 .answers-list {
   width: 100%;
-  height: 100%;
-  box-sizing: border-box;
-  border: 1px solid black;
 
   animation: slideInLeft 0.4s $animInCurve 4.1s;
   animation-fill-mode: both;
@@ -22,6 +19,7 @@
     cursor: pointer;
     height: fit-content;
     color: white;
+    font-size: 2rem;
 
     &.easy {
       background-color: green;
