--- a/src/components/web/game/letter-pool.scss
+++ b/src/components/web/game/letter-pool.scss
@@ -5,8 +5,8 @@
   box-sizing: border-box;
   border: 1px solid black;
 
-  padding-right: 12px;
-  padding-bottom: 8px;
+  // padding-right: 12px;
+  // padding-bottom: 8px;
 
   display: flex;
   flex-wrap: wrap;
@@ -15,8 +15,8 @@
   .letter-container {
     width: 50px;
     height: 50px;
-    margin-left: 5px;
-    margin-top: 5px;
+    margin-right: 5px;
+    margin-bottom: 5px;
 
     display: flex;
     justify-content: center;
