--- a/src/components/web/game/game-screen-web.scss
+++ b/src/components/web/game/game-screen-web.scss
@@ -1,19 +1,22 @@
 .game-screen-web {
   width: 555px;
   height: 100%;
-  padding: 50px 0px;
+  padding: 20px 0px;
   box-sizing: border-box;
 
-  display: grid;
-  grid-template-areas:
-    'score'
-    'letters'
-    'input'
-    'answers';
-  grid-template-rows: minmax(0, 80px) minmax(0, 222px) minmax(0, 80px) minmax(0, auto);
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+
+  .score-area {
+    width: 100%;
+    height: 80px;
+    box-sizing: border-box;
+    border: 1px solid black;
+    margin-bottom: 10px;
+  }
 
   .letter-pool-area {
-    grid-area: letters;
     margin-bottom: 10px;
 
     display: flex;
@@ -21,14 +24,12 @@
   }
 
   .answer-input-area {
-    grid-area: input;
-  }
+    flex: 0 0 80px;
+    width: 100%;
 
-  .score-area {
-    grid-area: score;
+    margin-bottom: 10px;
   }
 
   .answers-area {
-    grid-area: answers;
   }
 }
