--- a/src/components/web/game/game-screen-web.scss
+++ b/src/components/web/game/game-screen-web.scss
@@ -11,8 +11,6 @@
   .score-area {
     width: 100%;
     height: 80px;
-    box-sizing: border-box;
-    border: 1px solid black;
     margin-bottom: 10px;
   }
 
@@ -26,7 +24,7 @@
   .answer-input-area {
     flex: 0 0 80px;
     width: 100%;
-
+    min-width: 0;
     margin-bottom: 10px;
   }
 
