--- a/src/components/web/game/navbar.scss
+++ b/src/components/web/game/navbar.scss
@@ -25,7 +25,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      font-size: 3rem;
+      font-size: 2.5rem;
     }
   }
 
@@ -49,6 +49,7 @@
 
   .button {
     user-select: none;
+    cursor: pointer;
     height: 50px;
     width: fit-content;
     box-sizing: border-box;
