--- a/src/components/web/game/answer-input.scss
+++ b/src/components/web/game/answer-input.scss
@@ -43,6 +43,7 @@
   .accept-button {
     width: 30px;
     height: 30px;
+    margin-left: 3px;
     box-sizing: border-box;
     border: 1px solid black;
     cursor: pointer;
