--- a/src/components/web/game/answers-list.scss
+++ b/src/components/web/game/answers-list.scss
@@ -21,7 +21,7 @@
     font-size: 2rem;
 
     &.short {
-      background-color: #57886c;
+      background-color: #56766b;
     }
 
     &.medium {
