--- a/src/components/common/letter-tile/letter-tile.scss
+++ b/src/components/common/letter-tile/letter-tile.scss
@@ -1,3 +1,5 @@
+@import '../styles/palette.scss';
+
 .letter-tile {
   width: 100%;
   height: 100%;
@@ -15,7 +17,7 @@
   //box-shadow: 1px 1px 1px 1px rgb(105, 105, 105);
   //box-shadow: inset 0px 0px 2px 2px white;
   transition: background-color 0.1s linear;
-  background-color: #56766b;
+  background-color: $tileBaseColour;
 
   &.selectable {
     cursor: pointer;
@@ -29,7 +31,7 @@
 
   &:hover,
   &.active {
-    background-color: #c59849;
+    background-color: $tileActiveColour;
   }
 }
 
