--- a/src/components/web/game/answer-input.scss
+++ b/src/components/web/game/answer-input.scss
@@ -1,4 +1,5 @@
 @import '../../common/styles/animations.scss';
+@import '../../common/styles/palette.scss';
 
 .answer-input {
   width: 100%;
@@ -7,7 +8,7 @@
   box-sizing: border-box;
   border-radius: 5px;
   border: 1px solid black;
-  border-bottom: 6px solid grey;
+  border-bottom: 6px solid $tileBaseColour;
 
   display: flex;
   justify-content: space-between;
