--- a/src/components/web/game/answers-list.scss
+++ b/src/components/web/game/answers-list.scss
@@ -1,4 +1,5 @@
 @import '../../common/styles/animations.scss';
+@import '../../common/styles/palette.scss';
 
 .answers-list {
   width: 100%;
@@ -21,15 +22,15 @@
     font-size: 2rem;
 
     &.short {
-      background-color: #56766b;
+      background-color: $tileBaseColour;
     }
 
     &.medium {
-      background-color: #38405f;
+      background-color: $tileMedLengthColour;
     }
 
     &.long {
-      background-color: #832161;
+      background-color: $tileLongLengthColour;
     }
   }
 }
