--- a/src/components/web/game/navbar.scss
+++ b/src/components/web/game/navbar.scss
@@ -1,4 +1,5 @@
 @import '../../common/styles/animations.scss';
+@import '../../common/styles/palette.scss';
 
 .navbar {
   width: 100%;
@@ -26,6 +27,7 @@
       justify-content: center;
       align-items: center;
       font-size: 2.5rem;
+      color: $borderColour;
     }
   }
 
