--- a/src/components/common/styles/common-styles.scss
+++ b/src/components/common/styles/common-styles.scss
@@ -3,10 +3,11 @@
 .button {
   user-select: none;
   box-sizing: border-box;
-  border: 1px solid black;
-  border-bottom: 6px solid $tileBaseColour;
+  border: 1px solid $borderColour;
+  border-bottom: 6px solid $borderBotColour;
   border-radius: 5px;
   margin: 5px;
+  color: $borderColour;
 
   display: flex;
   justify-content: center;
