--- a/src/components/web/game/answer-input.scss
+++ b/src/components/web/game/answer-input.scss
@@ -7,8 +7,9 @@
   padding: 10px;
   box-sizing: border-box;
   border-radius: 5px;
-  border: 1px solid black;
-  border-bottom: 6px solid $tileBaseColour;
+  border: 1px solid $borderColour;
+  border-bottom: 6px solid $borderBotColour;
+  transition: border-bottom 0.15s linear;
 
   display: flex;
   justify-content: space-between;
@@ -23,6 +24,7 @@
   &.warn {
     animation: shakeSide 0.82s $shakeCurve;
     animation-fill-mode: forwards;
+    border-bottom: 6px solid $answerWarnColour;
   }
 
   .answer-word {
@@ -46,7 +48,7 @@
     height: 30px;
     margin-left: 3px;
     box-sizing: border-box;
-    border: 1px solid black;
+    border: 1px solid $borderColour;
     cursor: pointer;
     display: flex;
     justify-content: center;
