--- a/src/components/web/home/home-screen-web.scss
+++ b/src/components/web/home/home-screen-web.scss
@@ -22,6 +22,10 @@
       grid-template-rows: auto;
       grid-template-columns: repeat(4, minmax(0, 25%));
       grid-gap: 5px;
+
+      .letter-tile {
+        font-size: 2.5rem;
+      }
     }
 
     .top {
