--- a/src/components/common/styles/animations.scss
+++ b/src/components/common/styles/animations.scss
@@ -101,3 +101,17 @@ $shakeCurve: cubic-bezier(0.36, 0.07, 0.19, 0.97);
     transform: translateX(-1px);
   }
 }
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.2);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
