help dialog open/close anims

--- a/src/components/web/game/game-screen-web.scss
+++ b/src/components/web/game/game-screen-web.scss
@@ -3,6 +3,7 @@
   height: 100%;
   padding: 20px 0px;
   box-sizing: border-box;
+  position: relative;
 
   display: flex;
   flex-direction: column;
