--- a/src/components/common/styles/animations.scss
+++ b/src/components/common/styles/animations.scss
@@ -42,6 +42,16 @@ $shakeCurve: cubic-bezier(0.36, 0.07, 0.19, 0.97);
   }
 }
 
+@keyframes slideOutUp {
+  0% {
+    transform: translateY(0px);
+  }
+
+  100% {
+    transform: translateY(-1000px);
+  }
+}
+
 @keyframes slideOutDown {
   0% {
     transform: translateY(0px);
