--- a/src/components/web/game/help-dialog.scss
+++ b/src/components/web/game/help-dialog.scss
@@ -6,8 +6,15 @@
   height: 400px;
   box-sizing: border-box;
   border: 1px solid black;
+  border-radius: 5px;
+  padding: 5px;
   z-index: 10;
   background-color: white;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 
   &.enter {
     animation: slideInDown 0.4s $animInCurve;
@@ -24,5 +31,17 @@
   }
 
   .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .title {
+      font-size: 2rem;
+    }
+  }
+
+  .close {
+    width: 100px;
+    height: 50px;
   }
 }
