--- a/src/components/web/home/home-screen-web.scss
+++ b/src/components/web/home/home-screen-web.scss
@@ -72,4 +72,11 @@
       animation-fill-mode: forwards;
     }
   }
+
+  .loading {
+    width: 300px;
+    height: 60px;
+    margin-top: 5px;
+    font-size: 2rem;
+  }
 }
