--- a/src/components/common/button/button.scss
+++ b/src/components/common/button/button.scss
@@ -1,14 +1,21 @@
+@import '../styles/palette.scss';
+
 .button {
   width: 300px;
   height: 60px;
   margin-top: 5px;
   font-size: 2rem;
+  background-color: white;
 
   transition: all 0.1s linear;
   animation: slideInUp 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.05) 0.8s;
   animation-fill-mode: backwards;
 
   &.loading {
+    &:hover {
+      cursor: default;
+      border-bottom: 6px solid $borderBotColour;
+    }
   }
 
   &.play {
