--- a/src/components/web/home/home-screen-web.scss
+++ b/src/components/web/home/home-screen-web.scss
@@ -1,4 +1,5 @@
 @import '../../common/styles/animations.scss';
+@import '../../common/styles/common-styles.scss';
 
 .home-screen-web {
   width: 100%;
@@ -45,6 +46,40 @@
       &.exiting {
         animation: slideOutRight 0.8s $animOutCurve;
         animation-fill-mode: both;
+      }
+    }
+  }
+
+  .button {
+    width: 300px;
+    height: 60px;
+    margin-top: 5px;
+    font-size: 2rem;
+    background-color: white;
+
+    transition: all 0.1s linear;
+    animation: slideInUp 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.05) 0.8s;
+    animation-fill-mode: backwards;
+
+    &.loading {
+      &:hover {
+        cursor: default;
+        border-bottom: 6px solid $borderBotColour;
+      }
+    }
+
+    &.play {
+      &:hover {
+        margin-top: 0px;
+        width: 310px;
+        height: 65px;
+        font-size: 2.1rem;
+        cursor: pointer;
+      }
+
+      &.exiting {
+        animation: slideOutDown 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55) 0.2s;
+        animation-fill-mode: forwards;
       }
     }
   }
