Make all buttons use generic button component

--- a/src/components/common/button/button.scss
+++ b/src/components/common/button/button.scss
@@ -8,6 +8,7 @@
   border-radius: 5px;
   margin: 5px;
   color: $borderColour;
+  background-color: white;
 
   display: flex;
   justify-content: center;
