--- a/src/components/common/button/button.scss
+++ b/src/components/common/button/button.scss
@@ -19,4 +19,11 @@
     cursor: pointer;
     border-bottom: 6px solid $tileActiveColour;
   }
+
+  &.loading {
+    &:hover {
+      cursor: default;
+      border-bottom: 6px solid $borderBotColour;
+    }
+  }
 }
