--- a/src/components/web/home/home-screen-web.scss
+++ b/src/components/web/home/home-screen-web.scss
@@ -50,7 +50,7 @@
     }
   }
 
-  .button {
+  .play {
     width: 300px;
     height: 60px;
     margin-top: 5px;
@@ -61,26 +61,17 @@
     animation: slideInUp 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.05) 0.8s;
     animation-fill-mode: backwards;
 
-    &.loading {
-      &:hover {
-        cursor: default;
-        border-bottom: 6px solid $borderBotColour;
-      }
+    &:hover {
+      margin-top: 0px;
+      width: 310px;
+      height: 65px;
+      font-size: 2.1rem;
+      cursor: pointer;
     }
 
-    &.play {
-      &:hover {
-        margin-top: 0px;
-        width: 310px;
-        height: 65px;
-        font-size: 2.1rem;
-        cursor: pointer;
-      }
-
-      &.exiting {
-        animation: slideOutDown 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55) 0.2s;
-        animation-fill-mode: forwards;
-      }
+    &.exiting {
+      animation: slideOutDown 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55) 0.2s;
+      animation-fill-mode: forwards;
     }
   }
 }
