--- a/src/components/mobile/game/game-screen-mobile.scss
+++ b/src/components/mobile/game/game-screen-mobile.scss
@@ -11,10 +11,13 @@
   flex-wrap: nowrap;
   align-items: center;
 
+  border: 1px solid black;
+
   .score-area {
     width: 100%;
     height: 80px;
     margin-bottom: 10px;
+    border: 1px solid red;
   }
 
   .letter-pool-area {
@@ -22,12 +25,22 @@
 
     display: flex;
     flex-direction: column-reverse;
+    border: 1px solid green;
+
+    .letter-pool-mob {
+      width: 275px;
+      .letter-container {
+        width: 40px;
+        height: 40px;
+      }
+    }
   }
 
   .answer-input-area {
     flex: 0 0 80px;
     width: 90%;
     margin-bottom: 10px;
+    border: 1px solid purple;
   }
 
   .answers-area {
