--- a/src/components/mobile/game/game-screen-mobile.scss
+++ b/src/components/mobile/game/game-screen-mobile.scss
@@ -11,13 +11,10 @@
   flex-wrap: nowrap;
   align-items: center;
 
-  border: 1px solid black;
-
   .score-area {
     width: 100%;
-    height: 80px;
+    flex: 0 0 80px;
     margin-bottom: 10px;
-    border: 1px solid red;
   }
 
   .letter-pool-area {
@@ -25,7 +22,6 @@
 
     display: flex;
     flex-direction: column-reverse;
-    border: 1px solid green;
 
     .letter-pool-mob {
       width: 275px;
@@ -40,7 +36,6 @@
     flex: 0 0 80px;
     width: 90%;
     margin-bottom: 10px;
-    border: 1px solid purple;
   }
 
   .answers-area {
